--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "npm": "^8.12.0",
+    "sematext-agent-express": "^2.1.7",
     "start": "^5.1.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
